@@ -1,4 +1,7 @@
-﻿wersja 9.5.1 - 2021-09-03
+﻿wersja 9.5.2 - 2021-09-04
+- poprawka paly timeshift buffer
+
+wersja 9.5.1 - 2021-09-03
 - naprawiono znikający pasek czasu
 - poprawka dla serwisu WP Pilot
 - aktualizacja serwisu Telia Play
